; ModuleID = '/home/carl/AnghaBench/freebsd/sys/tests/epoch/extr_epoch_test.c_testloop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/tests/epoch/extr_epoch_test.c_testloop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@state_mtx = common dso_local global i32 0, align 4
@state_flags = common dso_local global i32 0, align 4
@ET_EXITING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"epoch start wait\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"W\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @testloop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @testloop(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 @mtx_lock(i32* @state_mtx)
  br label %4

4:                                                ; preds = %16, %1
  %5 = load i32, i32* @state_flags, align 4
  %6 = load i32, i32* @ET_EXITING, align 4
  %7 = and i32 %5, %6
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %24

9:                                                ; preds = %4
  %10 = call i32 @msleep(i32* @state_mtx, i32* @state_mtx, i32 0, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 0)
  %11 = load i32, i32* @state_flags, align 4
  %12 = load i32, i32* @ET_EXITING, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %9
  br label %25

16:                                               ; preds = %9
  %17 = call i32 @mtx_unlock(i32* @state_mtx)
  %18 = load i8*, i8** %2, align 8
  %19 = call i32 @epoch_testcase2(i8* %18)
  %20 = call i32 @pause(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 500)
  %21 = load i8*, i8** %2, align 8
  %22 = call i32 @epoch_testcase1(i8* %21)
  %23 = call i32 @mtx_lock(i32* @state_mtx)
  br label %4

24:                                               ; preds = %4
  br label %25

25:                                               ; preds = %24, %15
  %26 = call i32 @mtx_unlock(i32* @state_mtx)
  %27 = call i32 (...) @kthread_exit()
  ret void
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @msleep(i32*, i32*, i32, i8*, i32) #1

declare dso_local i32 @mtx_unlock(i32*) #1

declare dso_local i32 @epoch_testcase2(i8*) #1

declare dso_local i32 @pause(i8*, i32) #1

declare dso_local i32 @epoch_testcase1(i8*) #1

declare dso_local i32 @kthread_exit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
